# ros2_nav_training

./: README.md
aictrain_base/: CMakeLists.txt  package.xml
aictrain_base/launch/: fake_robot.launch.py  minimal_nav.launch.py  view_nav.launch.py
aictrain_base/maps/rectangle/: map.yaml
aictrain_base/params/: basic_params.yaml
aictrain_base/rviz/: view_nav.rviz
aictrain_planner/: CMakeLists.txt  aictrain_planner.xml  package.xml
aictrain_planner/include/aictrain_planner/: aictrain.hpp  aictrain_planner.hpp
aictrain_planner/launch/: bringup.launch.py
aictrain_planner/src/: aictrain.cpp  aictrain_planner.cpp
